--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <section class="home">
         <div class="nav-container">
             <div class="explore-style">
+                <div class="ham">
+                    <i class="fas fa-bars"></i>
+                </div>
                 <ul>
                     <li class="home-link">
                         HOME
@@ -118,24 +121,48 @@
     <svg class="skill-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#212121" fill-opacity="1" d="M0,192L24,197.3C48,203,96,213,144,213.3C192,213,240,203,288,176C336,149,384,107,432,80C480,53,528,43,576,69.3C624,96,672,160,720,208C768,256,816,288,864,298.7C912,309,960,299,1008,256C1056,213,1104,139,1152,144C1200,149,1248,235,1296,272C1344,309,1392,299,1416,293.3L1440,288L1440,0L1416,0C1392,0,1344,0,1296,0C1248,0,1200,0,1152,0C1104,0,1056,0,1008,0C960,0,912,0,864,0C816,0,768,0,720,0C672,0,624,0,576,0C528,0,480,0,432,0C384,0,336,0,288,0C240,0,192,0,144,0C96,0,48,0,24,0L0,0Z"></path></svg>
     <section class="projects">
         <h1 class="project-head">PROJECTS</h1>
-        <div class="porject-container">
+        <div class="project-container">
             <!-- claculator, custom video player, piano player, -->
-            <a href="" class="calculator">
+            <a href="https://codepen.io/surajitishere/full/QWMprvZ" class="calculator" target="blank">
                 <div class="project-item">
-                    <p class="project-text" id="calculator-text"> <span class="yellow">&lt;</span> calculator <span class="yellow">/&gt;</span> </p>
-                    <img class="project-img" src="Screenshot 2021-10-04 012100.png" alt="">
+                    <p class="project-text" id="calculator-text"> <span class="red">&lt;</span> calculator <span class="red">/&gt;</span> </p>
+                    <img class="project-img" src="https://i.ibb.co/k568JY0/Screenshot-2021-10-23-093811.png" alt="">
                 </div>
             </a>
-             <a href="" class="custom-video-player">
+             <a href="https://codepen.io/surajitishere/full/KKvWRyE" class="custom-video-player" target="blank">
                  <div class="project-item">
                     <p class="project-text" id="video-text"> <span class="red">&lt;</span> video player <span class="red">/&gt;</span></p>
-                    <img class="project-img" src="Screenshot 2021-10-04 012214.png" alt="">
+                    <img class="project-img" src="https://i.ibb.co/T4RPn04/Screenshot-2021-10-23-095315.png" alt="">
                 </div>
             </a>
-            <a href="" class="piano-player">
+            <a href="https://codepen.io/surajitishere/full/WNEpJaP" class="piano-player" target="blank">
                 <div class="project-item">
                     <p class="project-text piano-text"> <span class="red">&lt;</span> keyboard piano <span class="red">/&gt;</span></p>
-                    <img class="project-img" src="Screenshot 2021-10-04 012410.png" alt="">
+                    <img class="project-img" src="https://i.ibb.co/vBsSpnL/Screenshot-2021-10-04-012214.png" alt="">
+                </div>
+            </a>
+            <a href="https://codepen.io/surajitishere/full/WNEpJaP" class="anime-list" target="blank">
+                <div class="project-item">
+                    <p class="project-text anime-text"> <span class="red">&lt;</span> anime list <span class="red">/&gt;</span></p>
+                    <img class="project-img" src="https://i.ibb.co/8YWYWBY/Screenshot-2021-10-25-234358.png" alt="">
+                </div>
+            </a>
+            <a href="https://codepen.io/surajitishere/full/KKvWRYO" class="counter" target="blank">
+                <div class="project-item">
+                    <p class="project-text counter-text"> <span class="red">&lt;</span> counter <span class="red">/&gt;</span></p>
+                    <img class="project-img" src="https://i.ibb.co/Rg3XNJT/Screenshot-2021-10-25-235208.png" alt="">
+                </div>
+            </a>
+            <a href="https://codepen.io/surajitishere/full/NWvpMZm" class="quote" target="blank">
+                <div class="project-item">
+                    <p class="project-text quote-text"> <span class="red">&lt;</span> quote <span class="red">/&gt;</span></p>
+                    <img class="project-img" src="https://i.ibb.co/GkyR87y/Screenshot-2021-10-26-003158.png" alt="">
+                </div>
+            </a>
+            <a href="https://codepen.io/surajitishere/full/mdMWKbK" class="random-background-color" target="blank">
+                <div class="project-item">
+                    <p class="project-text random-text"> <span class="red">&lt;</span> backgrounds <span class="red">/&gt;</span></p>
+                    <img class="project-img" src="https://i.ibb.co/C8Xb0LD/Screenshot-2021-10-26-004305.png" alt="">
                 </div>
             </a>
         </div>
