--- a/index.html
+++ b/index.html
@@ -78,24 +78,29 @@
         <div class="intro">
             <p class="intro-title">Indroduction</p>
             <i class="fas fa-chevron-circle-down"></i>
-            <p class="intro-detail detail">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit fuga corporis facere quo natus molestiae, cupiditate optio accusantium eius! Tempora, magnam optio rem itaque exercitationem delectus quasi reprehenderit doloribus vitae asperiores natus sunt! Cum tempore aliquam architecto rerum saepe optio dolor, harum odio maxime, reprehenderit consequatur laudantium placeat deserunt impedit!</p>           
+            <p class="intro-detail detail">Hello!!! This is Surajit Mondal and i can make the frond end part of your website. I live in Gujarat,India. I can make the web-apps using HTML,CSS and Javascript. I am also learning react js. Everything in this portfolio webpage is made using scratch no css framewrok is used.</p>           
         </div>
 
         <div class="quali">
             <p class="quali-title">Qualification</p>
             <i class="fas fa-chevron-circle-down"></i>
-            <p class="quali-detail detail">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet enim suscipit architecto neque, quos deserunt maxime placeat sequi quasi nihil animi fugiat doloribus assumenda beatae illum doloremque, ratione eum, perferendis nisi rem quaerat! Dolores eum voluptatibus harum, minus voluptas dolor ipsa error incidunt fugiat minima accusantium aperiam autem voluptate saepe!</p>
+            <p class="quali-detail detail">I am currently pursuing Bachlor's degree in Life Sciences from University of Delhi. Programming came to me as a hobby but now i am good at it.</p>
         </div>
         <div class="int">
             <p class="int-title">Interests and Hobbies</p>
             <i class="fas fa-chevron-circle-down"></i>
-            <p class="int-detail detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut exercitationem ab eligendi, asperiores, quae tempore, qui ad deleniti magni quasi molestias nemo. Esse saepe culpa, aperiam animi commodi iusto corporis similique. Tempore iste neque harum, perferendis adipisci corrupti odio. Accusamus ea ducimus, inventore libero illum mollitia repellat quasi nostrum incidunt.</p>
+            <p class="int-detail detail">My hobby is to CODE!!!!! apart from programming i am into Astrobiology. Astronomy and Biology are my first and true love. Sometimes when the mood sets i play guitar. BTW is anybody into The Beatles???</p>
         </div>
         </div>
     </section>
     </div>
     <svg  class="about-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffff00" fill-opacity="1" d="M0,128L40,138.7C80,149,160,171,240,160C320,149,400,107,480,122.7C560,139,640,213,720,218.7C800,224,880,160,960,112C1040,64,1120,32,1200,37.3C1280,43,1360,85,1400,106.7L1440,128L1440,0L1400,0C1360,0,1280,0,1200,0C1120,0,1040,0,960,0C880,0,800,0,720,0C640,0,560,0,480,0C400,0,320,0,240,0C160,0,80,0,40,0L0,0Z"></path></svg>
     <section class="skills">
+        <i class="fas fa-laptop-code"></i>
+        <i class="fas fa-robot"></i>
+        <i class="far fa-keyboard"></i>
+        <i class="fas fa-server"></i>
+        <i class="fas fa-satellite"></i>
         <h1 class="skill-head">SKILLS</h1>
         <i class="fab fa-html5"></i>
         <i class="fab fa-css3-alt"></i>
@@ -114,7 +119,7 @@
         <div class="otherskill">
             <p class="otherskill-title">Other-skills</p>
             <i class="fas fa-chevron-circle-down otherdown"></i>
-            <p class="otherskill-detail detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia dolor maiores beatae ab debitis molestiae. Sequi iste sed labore consequuntur? Magnam impedit totam consequatur tempora deserunt illo? Quisquam aspernatur mollitia, quidem dolores quam sed qui explicabo porro nihil necessitatibus, consequatur aliquam temporibus provident officiis, dolorum magni laborum. Sit, voluptatem iure.</p>
+            <p class="otherskill-detail detail">Apart from HTML,CSS and Javascript i also know the basics of java and c++. In School i also did learn some MySQL. And as i mentioned earlier i am currently learning reactJS!!!</p>
         </div>
     </section>
     <div class="yellow-background2">
@@ -175,20 +180,20 @@
     <section class="footer">
         <h1 class="footer-head">Contact me!</h1>
     <div class="social-container">
-        <a href="" class="fb">
-            <i class="fab fa-facebook"></i>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="fb" target="blank">
+            <i class="fab fa-facebook" target="blank"></i>
         </a>
-        <a href="" class="insta">
-            <i class="fab fa-instagram"></i>
+        <a href="https://www.instagram.com/surajitishere/" class="insta" target="blank">
+            <i class="fab fa-instagram" ></i>
         </a>
-        <a href="" class="twitter">
-            <i class="fab fa-twitter"></i>
+        <a href="https://twitter.com/surajitishere7" class="twitter" target="blank">
+            <i class="fab fa-twitter" ></i>
         </a>
-        <a href="" class="linkedin">
-            <i class="fab fa-linkedin"></i>
+        <a href="https://www.linkedin.com/in/surajit-mondal-6427681ab/" class="linkedin" target="blank">
+            <i class="fab fa-linkedin" ></i>
         </a>
-        <a href="" class="github">
-            <i class="fab fa-github"></i>
+        <a href="https://github.com/surajitishere" class="github" target="blank">
+            <i class="fab fa-github" ></i>
         </a>
     </section>
     </div>
