--- a/index.html
+++ b/index.html
@@ -140,13 +140,13 @@
                     <img class="project-img" src="https://i.ibb.co/T4RPn04/Screenshot-2021-10-23-095315.png" alt="">
                 </div>
             </a>
-            <a href="https://codepen.io/surajitishere/full/NWvpMME" class="piano-player" target="blank">
+            <a href="https://surajitishere.github.io/keyboard-piano.github.io/" class="piano-player" target="blank">
                 <div class="project-item">
                     <p class="project-text piano-text"> <span class="red">&lt;</span> keyboard piano <span class="red">/&gt;</span></p>
                     <img class="project-img" src="https://i.ibb.co/vBsSpnL/Screenshot-2021-10-04-012214.png" alt="">
                 </div>
             </a>
-            <a href="https://codepen.io/surajitishere/full/WNEpJaP" class="anime-list" target="blank">
+            <a href="https://surajitishere.github.io/anime-list/" class="anime-list" target="blank">
                 <div class="project-item">
                     <p class="project-text anime-text"> <span class="red">&lt;</span> anime list <span class="red">/&gt;</span></p>
                     <img class="project-img" src="https://i.ibb.co/8YWYWBY/Screenshot-2021-10-25-234358.png" alt="">
